--- a/whatsapp-clone-client/package.json
+++ b/whatsapp-clone-client/package.json
@@ -9,17 +9,20 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "12.1.10",
+    "@types/history": "^4.7.8",
     "@types/jest": "^26.0.20",
     "@types/node": "12.0.0",
     "@types/react": "16.9.53",
     "@types/react-dom": "16.9.8",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.7",
+    "history": "^5.0.0",
     "jest-fetch-mock": "^3.0.3",
     "moment": "^2.29.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-router-dom": "^5.2.0",
+    "react-router-transition": "^2.1.0",
     "react-scripts": "4.0.1",
     "styled-components": "^5.2.1",
     "typescript": "4.0.3",
